--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -31,6 +31,7 @@ body {
   background-color: var(--bgColor);
   color: var(--textColor);
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .features h2,
