--- a/src/components/projectCard/style.scss
+++ b/src/components/projectCard/style.scss
@@ -1,20 +1,14 @@
 .project-card {
   background-color: var(--boxColor);
-  width: 31%;
-  height: 440px;
+  width: 50%;
   margin: 0 auto;
   color: var(--textColor);
   position: relative;
   visibility: hidden;
 
-  .img-container {
-    width: 100%;
-    height: 230px;
-  }
-
   .card-img {
     width: 100%;
-    height: inherit;
+    margin: 0 auto;
   }
 
   .card-text {
@@ -34,27 +28,24 @@
 
 @media only screen and (min-width: 280px) and (max-width: 400px) {
   .project-card {
-    width: 85%;
-    height: 450px;
+    width: 90%;
   }
 }
 
 @media only screen and (min-width: 400px) and (max-width: 600px) {
   .project-card {
-    width: 70%;
-    height: 450px;
+    width: 80%;
   }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 768px) {
   .project-card {
-    width: 50%;
-    height: 450px;
+    width: 90%;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   .project-card {
-    width: 45%;
+    width: 80%;
   }
 }
